add_subdirectory(device_management)
add_subdirectory(lorawan_api)
add_subdirectory(lr1mac)
add_subdirectory(modem_core)
add_subdirectory(modem_services)
add_subdirectory(modem_supervisor)
add_subdirectory(radio_drivers)
add_subdirectory(radio_planner)
add_subdirectory(smtc_modem_crypto)
add_subdirectory(smtc_modem_services)
add_subdirectory(smtc_ral)
add_subdirectory(smtc_ralf)
